add store sample website

--- a/src/app/components/demo/demo.component.html
+++ b/src/app/components/demo/demo.component.html
@@ -96,7 +96,7 @@
         <h3>{{ translations.demo.store }}</h3>
         <div class="demo-image-container">
           <img 
-            src="./assets/service-preview.svg" 
+            src="./assets/store-preview.svg" 
             alt="Store Website Preview"
             class="demo-preview-image"
             (click)="openStoreDemo()">
